# learn-ai

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  requirements.txt  ruff.toml  rustfmt.toml
DL-a-visual-approach/Chapter01-OverviewOfMachineLearning/: Chapter01-OverviewOfML.ipynb
DL-a-visual-approach/Chapter01-OverviewOfMachineLearning/input_data/: VGG16_syn_words.py
DL-a-visual-approach/Chapter02-EssentialStatistics/: Chapter-02-Statistics.ipynb
DL-a-visual-approach/Chapter03-MeasuringPerformance/: Chapter03-MeasuringPerformance.ipynb
DL-a-visual-approach/Chapter04-BayesRule/: Chapter04-BayesRule.ipynb
DL-a-visual-approach/Chapter05-CurvesAndSurfaces/: Chapter05-CurvesAndSurfaces.ipynb
DL-a-visual-approach/Chapter14-Backpropagation/: Chapter14-Backpropagation-1-Error-Surfaces.ipynb
DL-a-visual-approach/Chapter16-CNNs/: Chapter16-CNNs-1.ipynb
agentic/adp/: Cargo.toml  README.md  test_routing.sh
agentic/adp/ch01/: Agentic设计模式-提示链.md  multi_step.py
agentic/adp/ch02/: Agentic设计模式-路由模式.md  routing-langgraph.py  routing.py
agentic/adp/ch03/: Agentic设计模式-并行模式.md  parallelization-langchain.py
agentic/adp/ch04/: Agentic设计模式-反思模式.md  reflection-langchain.py  reflection-langgraph.py
agentic/adp/examples/: ch02-routing.rs
begging-manual/: 1.2、深度学习入门修炼手册：基于PyTorch的神经网络.ipynb  README.md
books/深度学习的数学/: README.md  ch04-神经网络和误差反向传播法.ipynb
cvaa/ch02/: index.ipynb  math.ipynb
cvaa/math/: normalization.ipynb
d2l-exercise/: README.md
files/: from-csv.py
game/: snake.py
langgraph/apps/: README.md
langgraph/apps/getting/: pyproject.toml
langgraph/tutorials/: tutorial-custom-state.py  tutorial-human-loop.ipynb  tutorial-time-travel.ipynb  tutorial.ipynb
llm/: pgvector.ipynb
mastering-cv/: ch01.ipynb  ch02.ipynb
math-and-architectures/: README.md
math-and-architectures/python/ch11/: 11.3.4-hymenoptera-deep-classifier.ipynb
math-and-architectures/python/ch2/: 2.12.5-overdet.ipynb  2.13-eig.ipynb  2.14-rotation.ipynb  2.15-mat-diagonalization.ipynb  2.16-spectral-decomp.ipynb  2.17-hyper-ellipse.ipynb  2.2-vector-pytorch-intro.ipynb  2.4-matrix-pytorch-intro.ipynb  2.7-transpose-dot-matmul.ipynb
math-and-architectures/python/ch3/: 3.4-common.ipynb  3.4.1-gradients.ipynb  3.4.2-gradients-nonlinear.ipynb  3.4.3-gradients-catbrain.ipynb
modern-computer-vision-2ed/Chapter04/: CNN_on_FashionMNIST.ipynb  Cats_Vs_Dogs.ipynb  Visualizing_the_filters'_learning.ipynb
modern-computer-vision-2ed/Chapter05/: 2D_and_3D_facial_keypoints.ipynb  Facial_keypoints_detection.ipynb  Implementing_ResNet18_for_image_classification.ipynb  Implementing_VGG16_for_image_classification.ipynb  Resnet_block_architecture.ipynb  VGG_architecture.ipynb  age_gender_prediction.ipynb
modern-computer-vision-2ed/Chapter06/: Class_activation_maps.ipynb
modern-computer-vision-2ed/Chapter07/: Calculating_intersection_over_union.ipynb  Training_RCNN.ipynb
nnfs/: README.md  Second_chapter.ipynb
nnfs/Chapter_10/: Ch10_Final.py  ch10-Optimizers.ipynb
nnfs/Chapter_2/: Ch2_Final.py
nnfs/Chapter_3/: Ch3_Final.py
nnfs/Chapter_4/: AF_P.py  Ch4_Final.py  activation_function.py
nnfs/Chapter_5/: Axis.py  Ch5_Final.py  Final_loss_function.py  Loss_function.py  test_loss_procedure.py
nnfs/Chapter_6/: Ch6_final.py  ch06-introducing-optimization.ipynb  weight_bias_update_V0.py
nnfs/Chapter_7/: ch07-Derivatives.ipynb
nnfs/Chapter_8/: ch08.ipynb
nnfs/Chapter_9/: Ch9_Final.py  ch09-Backpropagation.ipynb
pytorch/basics/: basics.ipynb  simple-model.ipynb
pytorch/cnn/: lenet.ipynb
pytorch/cnn/alexnet/: alexnet.py  alexnet_test.py  alexnet_train.py
pytorch/cnn/googlenet/: googlenet.py  googlenet_train.py
pytorch/cnn/lenet/: lenet.py  lenet_test.py  lenet_train.py
pytorch/cnn/resnet/: infer_rice.py  mean_std.py  resnet.py  resnet_train_test-cat_dog.py  resnet_train_test-rice.py
pytorch/cnn/vgg16/: vgg16.py
pytorch/image-video/: coco_eval.py  coco_utils.py  engine.py  torchvison_tutorial.ipynb  transforms.py  utils.py
pytorch/images/lenet/: lenet_train.py
pytorch/images/resnet/: data_partitioning.py  infer-cat_dog.py  infer-rice.py  resnet_train_test-cat_dog.py  resnet_train_test-rice.py
pytorch/images/vgg16/: vgg16_test.py  vgg16_train.py
pytorch/util/: __init__.py  test.py  train.py
udl/: README.md
udl/Notebooks/Chap01/: 1_1_BackgroundMathematics.ipynb
udl/Notebooks/Chap02/: 2_1_Supervised_Learning.ipynb
udl/Notebooks/Chap03/: 3_1_Shallow_Networks_I.ipynb  3_2_Shallow_Networks_II.ipynb  3_3_Shallow_Network_Regions.ipynb  3_4_Activation_Functions.ipynb
udl/Notebooks/Chap04/: 4_1_Composing_Networks.ipynb
udl/Notebooks/Chap06/: 6_1_Line_Search.ipynb  6_2_Gradient_Descent.ipynb  6_3_Stochastic_Gradient_Descent.ipynb  6_4_Momentum.ipynb  6_5_Adam.ipynb
udl/Notebooks/Chap07/: 7_1_Backpropagation_in_Toy_Model.ipynb  7_2_Backpropagation.ipynb  7_3_Initialization.ipynb
udl/Notebooks/Chap11/: 11_1_Shattered_Gradients.ipynb
udl/notes/: ch06-fit_model.ipynb
yolo/: demo.py
