[workspace]
members = ["agentic/adp"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.89"
description = "AI 学习"
license = "MIT"
repository = "https://github.com/yangjing/learn-ai"
authors = ["杨景 <yang.xunjing@qq.com>"]
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"
#unused = "allow" # For experimental dev

[workspace.lints.clippy]
uninlined_format_args = "allow"

[profile.release]
codegen-units = 1
panic = "abort"
strip = true
lto = true
opt-level = "z"
# default-features = false
# features = ["tikv-jemallocator"]

# Optimize build times for development
[profile.dev]
opt-level = 1
debug = true

# Faster builds for dependencies
[profile.dev.package."*"]
opt-level = 2
debug = false

[profile.bench]
lto = "fat"
codegen-units = 1
opt-level = 3

[workspace.dependencies]
dotenvy = "0.15"
mdbook = "0.4"
mdbook-mermaid = "0.15"
# -- Error
anyhow = "1"
thiserror = "2"
# -- Async & Concurrent/Parallel & Atomic
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"
async-stream = "0.3"
tokio = { version = "1.47", features = [
  "macros",          # #[tokio::main] and #[tokio::test]
  "rt-multi-thread", # Multi-threaded runtime
  "signal",          # Signal handling for graceful shutdown
  "net",             # Network primitives
  "fs",              # File system operations
  "time",            # Time utilities
  "sync",            # Synchronization primitives
  "process",         # Process primitives
] }
tokio-tungstenite = { version = "0.27" }
tokio-stream = { version = "0.1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tokio-test = { version = "0.4" }
tokio-mpmc = { version = "0.2" }
arc-swap = { version = "1.7", features = ["serde"] }
dashmap = { version = "6.1" }
mea = { version = "0.4" }
kanal = { version = "0.1" }
# -- Logging
log = "0.4"
logforth = { version = "0.27", features = ["colored", "append-rolling-file"] }
# -- Time
chrono = { version = "0.4", default-features = false, features = [
  "std",
  "clock",
  "serde",
] }
duration-str = "0.17"
# -- Serde
serde = { version = "1.0", features = ["derive", "rc"] }
serde_with = { version = "3.14", features = ["chrono_0_4"] }
serde_json = { version = "1.0" }
serde_repr = "0.1"
sonic-rs = { version = "0.5" }
jsonpath-rust = { version = "1.0" }
json-patch = { version = "4" }
# -- Web
url = "2.4"
urlencoding = "2.1"
serde_urlencoded = "0.7"
headers = "0.4"
mime = "0.3"
http = "1"
http-body-util = "0.1"
# async http client
reqwest = { version = "0.12", features = [
  "rustls-tls-webpki-roots",
  "json",
  "gzip",
] }

# -- Data Science
polars = "0.50"
# An Excel/OpenDocument Spreadsheets reader and deserializer in pure rust
calamine = "0.30"
# -- cloud storage access
opendal = { version = "0.54", features = [
  "services-oss",
  "services-obs",
  "services-s3",
  "services-fs",
] }
# -- LLM
rig-core = { version = "0.19", features = ["derive"] }
rig-postgres = { version = "0.1" }
graph-flow = { version = "0.3" }
rmcp = { version = "0.6", features = [
  "client",
  "reqwest",
  "transport-streamable-http-client-reqwest",
  "transport-child-process",
  "tower",
  "auth",
] }

# -- Dev/Test
pretty_assertions = "1.4"
asserhttp = { version = "0.7", features = ["reqwest"] }
