[project]
name = "learn-ai"
version = "0.0.1"
description = "杨景的 AI 学习记录"
authors = [{ name = "Yang Jing", email = "yang.xunjing@qq.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "accelerate>=1.10.0",
  "jupyterlab>=4.4.5",
  "langchain-deepseek>=0.1.4",
  "langchain-openai>=0.3.28",
  "langgraph>=0.6.4",
  "matplotlib>=3.10.5",
  "numpy>=2.3.2",
  "opencv-python>=4.11.0.86",
  "pandas>=2.3.1",
  "pgvector>=0.4.1",
  "polars>=1.32.2",
  "psycopg[binary,pool]>=3.2.9",
  "sqlmodel>=0.0.24",
  "tensorboard>=2.20.0",
  "torch>=2.8.0",
  "torchaudio>=2.8.0",
  "torchsummary>=1.5.1",
  "torchvision>=0.23.0",
  "transformers>=4.55.0",
  "ultralytics>=8.3.176",
]

[project.urls]
"Homepage" = "https://github.com/yangjing/learn-ai"

[dependency-groups]
dev = [
  "hf-transfer>=0.1.9",
  "huggingface-hub>=0.34.3",
  "pytest>=8.4.1",
  "tqdm>=4.67.1",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]

# Same as Black.
line-length = 120
indent-width = 2

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = ["E741"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
