[package]
name = "adp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
rmcp = { workspace = true }
rig-core = { workspace = true }
graph-flow = { workspace = true }
dotenvy = { workspace = true }
